[package]
name = "campus-network-master"
version = "1.2.0"
edition = "2021"

authors = ["https://github.com/mobeicanyue"]
description = "A tool to help you connect to the campus network."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mobeicanyue/Campus-Network-Master-Rust"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0", features = ["alloc"] }

[target.aarch64-pc-windows-msvc.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11", features = ["blocking", "default-tls"] }

[target.'cfg(not(all(target_arch = "aarch64", target_os = "windows", target_env = "msvc")))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }

[profile.release]
lto = true