[package]
name = "campus-network-master"
version = "2.0.6"
edition = "2021"

authors = ["https://github.com/mobeicanyue"]
description = "A tool to help you connect to the campus network."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mobeicanyue/Campus-Network-Master-Rust"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0", features = ["alloc"], default-features = false }

# [target.'cfg(not(all(target_arch = "riscv64", target_os = "linux")))'.dependencies]
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"], default-features = false }

# [target.riscv64gc-unknown-linux-gnu.dependencies]
# openssl = { version = "0.10", features = ["vendored"], default-features = false }
# reqwest = { version = "0.11", features = ["blocking", "default-tls"], default-features = false }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
