[package]
name = "campus-network-master"
version = "2.0.6"
edition = "2021"

authors = ["https://github.com/mobeicanyue"]
description = "A tool to help you connect to the campus network."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mobeicanyue/Campus-Network-Master-Rust"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0", features = ["alloc"], default-features = false }
reqwest = { version = "0.12", features = ["blocking"], default-features = false }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
